--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -15,8 +15,8 @@
       <view class="label">5千平方米的戏雪区</view>
     </view>
     <view class="score-wrap">
-      <van-rate value="{{item.rate || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
-      <text class="score">{{item.rate || '暂无评'}}分</text>
+      <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+      <text class="score">{{item.score || '暂无评'}}分</text>
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
