--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -168,13 +168,16 @@
   <view class="content-title-wrap">
     <view class="content-title">用户点评</view>
   </view>
-  <view class="comment-list">
-    <evaluation-item wx:for="{{commentList}}" wx:key="index" item="{{item}}" />
+  <view class="evaluation-summary" wx:if="{{evaluationSummary.total}}">
+    <view class="evaluation-list">
+      <evaluation-item wx:for="{{evaluationSummary.list}}" wx:key="index" item="{{item}}" />
+    </view>
+    <view class="total-tips row center">
+      <text>共{{evaluationSummary.total}}条点评</text>
+      <image class="more-icon" src="./images/more.png" />
+    </view>
   </view>
-  <view class="total-tips row center">
-    <text>共1000条点评</text>
-    <image class="more-icon" src="./images/more.png" />
-  </view>
+  <empty-illus wx:if="{{!evaluationSummary.total}}" desc="暂无点评" height="520rpx" />
 
   <view class="content-title-wrap">
     <view class="content-title">热门问答</view>
