--- a/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/hotel-order-list/components/order-list/index.wxml
@@ -49,7 +49,7 @@
         <button 
           class="btn active" 
           wx:if="{{item.status === 401 || item.status === 402}}" 
-          catchtap="navToEvaluation" data-id="{{item.id}}"
+          catchtap="navToEvaluation" data-order-id="{{item.id}}" data-hotel-id="{{item.roomInfo.hotelId}}"
         >评价</button>
       </view>
     </view>
