--- a/pages/subpages/mine/utils/hotelOrder.wxs
+++ b/pages/subpages/mine/utils/hotelOrder.wxs
@@ -1,29 +1,35 @@
 function statusDesc(status) {
-  var desc = '';
+  var desc = "";
   if (status === 101) {
-    desc = '等待买家付款';
+    desc = "等待买家付款";
   } else if (status === 102 || status === 103 || status === 104) {
-    desc = '交易关闭';
+    desc = "交易关闭";
   } else if (status === 201) {
-    desc = '等待卖家确认';
+    desc = "等待卖家确认";
   } else if (status === 202) {
-    desc = '退款申请中';
+    desc = "退款申请中";
   } else if (status === 203) {
-    desc = '退款成功';
+    desc = "退款成功";
   } else if (status === 301) {
-    desc = '待入住';
-  } else if (status === 401 || status === 402) {
-    desc = '交易成功';
+    desc = "待入住";
+  } else if (status === 401 || status === 402 || status === 501) {
+    desc = "交易成功";
   }
   return desc;
 }
 
 function paymentDesc(status) {
-  var desc = '应付款';
+  var desc = "应付款";
   if (status === 101) {
-    desc = '需付款';
-  } else if (status === 201 || status === 301 || status === 401 || status === 402) {
-    desc = '实付款';
+    desc = "需付款";
+  } else if (
+    status === 201 ||
+    status === 301 ||
+    status === 401 ||
+    status === 402 ||
+    status === 501
+  ) {
+    desc = "实付款";
   }
   return desc;
 }
@@ -31,4 +37,4 @@ function paymentDesc(status) {
 module.exports = {
   statusDesc: statusDesc,
   paymentDesc: paymentDesc,
-}
+};
