--- a/pages/subpages/mall/catering/components/restaurant-item/index.wxml
+++ b/pages/subpages/mall/catering/components/restaurant-item/index.wxml
@@ -12,8 +12,8 @@
         <view class="category row">{{item.categoryName}}</view>
       </view>
       <view class="score-wrap">
-        <van-rate value="{{item.rate || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
-        <view class="score {{ item.rate ? 'active' : '' }}">{{item.rate || '暂无评分'}}</view>
+        <van-rate value="{{item.score || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+        <view class="score {{ item.score ? 'active' : '' }}">{{item.score || '暂无评分'}}</view>
         <view class="price">¥{{item.price}}/人</view>
       </view>
       <view class="open-time-wrap row top">
