--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -11,8 +11,8 @@
     <view class="spot-info" wx:if="{{navBarVisible}}">
       <view class="spot-name">{{scenicInfo.name}}</view>
       <view class="grade-wrap row">
-        <van-rate value="{{scenicInfo.rate || 0}}" size="8" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
-        <text class="spot-grade">{{scenicInfo.rate}}</text>
+        <van-rate value="{{scenicInfo.score || 0}}" size="8" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
+        <text class="spot-grade">{{scenicInfo.score}}</text>
       </view>
     </view>
   </view>
