--- a/pages/subpages/mine/relative-commodity/index.wxss
+++ b/pages/subpages/mine/relative-commodity/index.wxss
@@ -79,12 +79,12 @@
   border-radius: 4rpx;
 }
 
-.goods-list {
+.commodity-list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.goods-item {
+.commodity-item {
   margin-bottom: 22rpx;
   padding: 24rpx;
   width: 340rpx;
@@ -92,18 +92,18 @@
   background: #FFFFFF;
   border-radius: 20rpx;
 }
-.goods-img {
+.commodity-img {
   width: 292rpx;
   height: 292rpx;
   border-radius: 10rpx;
 }
-.goods-name {
+.commodity-name {
   margin-top: 10rpx;
   flex: 1;
   color: #333;
   font-size: 28rpx;
 }
-.goods-price-wrap {
+.commodity-price-wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
