--- a/pages/subpages/mine/relative-commodity/index.wxss
+++ b/pages/subpages/mine/relative-commodity/index.wxss
@@ -79,6 +79,10 @@
   border-radius: 4rpx;
 }
 
+.content {
+  padding: 234rpx 24rpx calc(136rpx + env(safe-area-inset-bottom));
+}
+
 .commodity-list {
   display: flex;
   justify-content: space-between;
@@ -126,4 +130,3 @@
   background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
   border-radius: 44rpx;
 }
-
