--- a/pages/subpages/mine/relative-commodity/index.wxml
+++ b/pages/subpages/mine/relative-commodity/index.wxml
@@ -44,7 +44,7 @@
 
   <view class="list-wrap" wx:if="{{ curMenuIdx === 1 }}">
     <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{hotelList}}" wx:key="index" bindtap="toggleScenicSelected" data-index="{{index}}">
+      <view class="commodity-item" wx:for="{{hotelList}}" wx:key="index" bindtap="toggleHotelSelected" data-index="{{index}}">
         <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="commodity-name omit single-line">{{item.name}}</view>
         <view class="commodity-price-wrap">
@@ -59,7 +59,7 @@
 
   <view class="list-wrap" wx:if="{{ curMenuIdx === 2 }}">
     <view class="commodity-list">
-      <view class="commodity-item" wx:for="{{restaurantList}}" wx:key="index" bindtap="toggleScenicSelected" data-index="{{index}}">
+      <view class="commodity-item" wx:for="{{restaurantList}}" wx:key="index" bindtap="toggleRestaurantSelected" data-index="{{index}}">
         <image class="commodity-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
         <view class="commodity-name omit single-line">{{item.name}}</view>
         <view class="commodity-price-wrap">
