--- a/pages/subpages/mine/create-note/index.wxml
+++ b/pages/subpages/mine/create-note/index.wxml
@@ -1,42 +1,36 @@
 <view class="container">
   <view class="card">
-    <view class="title">上传图片</view>
-    <view style="margin-top: 24rpx;">
-      <van-uploader 
-        file-list="{{imageList}}" 
-        bind:after-read="uploadImage" 
-        bind:delete="deleteImage" 
-        accept="image" 
-        max-count="10" 
-        deletable 
-      />
+    <view class="list">
+      <view class="title">上传图片</view>
+      <view style="margin-top: 24rpx;">
+        <van-uploader 
+          file-list="{{imageList}}" 
+          bind:after-read="uploadImage" 
+          bind:delete="deleteImage" 
+          accept="image" 
+          max-count="10" 
+          deletable 
+        />
+      </view>
     </view>
   </view>
 
   <view class="card">
-    <view class="title">游记内容</view>
-    <textarea class="title-textarea" bindinput="setContent" placeholder="分享这一刻的心情..." />
-  </view>
-
-  <view class="card" style="padding-top: 0; padding-bottom: 0;">
     <view class="list row between">
       <view class="title row">游记标题</view>
       <input class="list-input" placeholder="有趣的标题更吸引人哦～" bindinput="setTitle" />
     </view>
-    <view class="list row between" wx:if="{{userInfo.merchantId}}">
-      <view class="title">相关商品</view>
-      <view class="list-picker row" bindtap="pickRelativeCommodity">
-        <text class="list-picker-desc omit single-line">{{pickedCommoditiesName? ('已选：' + pickedCommoditiesName) : '请选择商品'}}</text>
-        <image class="arrow" src="https://img.ubo.vip/mp/sass/mine/gray-arrow.png" />
-      </view>
+    <view class="list">
+      <view class="title">游记内容</view>
+      <textarea class="title-textarea" bindinput="setContent" placeholder="分享这一刻的心情..." />
     </view>
+  </view>
+
+  <view class="card">
     <view class="list row between">
       <view class="title row">设置私密</view>
       <switch color="#0095fa" bindchange="toggleIsPrivate" />
     </view>
-  </view>
-
-  <view class="card" style="padding-top: 0; padding-bottom: 0;">
     <view class="list row between">
       <view class="title row">显示位置</view>
       <switch color="#0095fa" checked="{{addressVisible}}" bindchange="toggleAddressVisible" />
@@ -49,6 +43,17 @@
       </view>
       <input class="list-input" wx:if="{{address}}" value="{{address}}" bindinput="editAddress" />
     </view>
+  </view>
+
+  <view class="card">
+    <view class="title-wrap row between">
+      <view class="title">相关商品</view>
+      <view class="add-btn row" bindtap="pickRelativeCommodity">
+        <view>选择商品</view>
+        <image class="arrow" src="/images/arrow.png" />
+      </view>
+    </view>
+    <empty-illus wx:if="{{!mediaCommodityList.length}}" desc="暂未选择商品" height="520rpx" />
   </view>
 </view>
 
