--- a/pages/subpages/mine/create-note/index.wxss
+++ b/pages/subpages/mine/create-note/index.wxss
@@ -5,15 +5,19 @@
 .card {
   position: relative;
   margin-bottom: 24rpx;
-  padding: 24rpx;
+  padding: 0 24rpx;
   font-size: 28rpx;
   background: #fff;
   border-radius: 16rpx;
+}
+.title-wrap {
+  padding: 24rpx 0;
 }
 .title {
   color: #333;
   font-weight: bold;
 }
+
 
 .title-textarea {
   margin-top: 24rpx;
@@ -48,7 +52,7 @@
 }
 
 .list {
-  height: 110rpx;
+  padding: 32rpx 0;
   border-bottom: 1px solid #F5F6F7;
 }
 .list:last-child {
@@ -68,14 +72,20 @@
   width: 42rpx; 
   height: 42rpx;
 }
-.arrow {
-  width: 32rpx;
-  height: 32rpx;
-}
+
 .delete-icon {
   margin-left: 10rpx;
   width: 30rpx;
   height: 30rpx;
+}
+
+.add-btn {
+  color: #1986F8;
+  font-size: 26rpx;
+}
+.arrow {
+  width: 26rpx;
+  height: 26rpx;
 }
 
 .publish-btn {
