feat: 商品图片字段image改为cover

--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -1,5 +1,5 @@
 <view class="goods-item {{visible ? 'show' : ''}}" bindtap="navToGoodsDetail">
-  <image class="cover" mode="widthFix" src="{{item.image}}" bindload="onCoverLoaded" lazy-load />
+  <image class="cover" mode="widthFix" src="{{item.cover}}" bindload="onCoverLoaded" lazy-load />
   <view class="content">
     <view class="title omit">
       <text class="goods-tag" wx:if="{{!item.shopInfo}}">自营</text>
