--- a/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxml
+++ b/pages/subpages/home/media/live/create-live/components/goods-picker-popup/index.wxml
@@ -3,7 +3,7 @@
     <scroll-view class="goods-list-wrap" bindscrolltolower="loadMore" scroll-y>
       <view class="goods-list">
         <view class="goods-item" wx:for="{{goodsList}}" wx:key="index" bindtap="toggleChecked" data-index="{{index}}">
-          <image class="goods-img" src="{{item.image}}" mode="aspectFill" lazy-load />
+          <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
           <view class="goods-name omit single-line">{{item.name}}</view>
           <view class="goods-price-wrap">
             <price-unit price="{{item.price}}" />
