--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -18,7 +18,7 @@
       bindtap="navToGoodsDetail"
       data-id="{{item.id}}"
     >
-      <image class="goods-image" src="{{item.image}}" lazy-load />
+      <image class="goods-image" src="{{item.cover}}" lazy-load />
       <view class="content">
         <view class="goods-title omit single-line">{{item.name}}</view>
         <price-unit price="{{item.price || 0}}" />
