--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -26,7 +26,7 @@
           <van-swipe-cell bind:close="deleteGoods" data-id="{{_item.id}}" data-cart-index="{{index}}" data-goods-index="{{_index}}" async-close right-width="{{ 65 }}">
             <view class="goods-list row" bindtap="showGoodsDetail" data-id="{{_item.goodsId}}">
               <checkbox class="checkbox {{deleteBtnVisible ? 'danger' : ''}}" checked="{{_item.checked}}" disabled="{{_item.status !== 1 && !deleteBtnVisible}}" catchtap="toggleGoodsChecked" data-cart-index="{{index}}" data-goods-index="{{_index}}"/>
-              <image class="goods-img {{_item.status === 3 ? 'invalid' : ''}}" src="{{_item.image}}" mode="aspectFill" lazy-load />
+              <image class="goods-img {{_item.status === 3 ? 'invalid' : ''}}" src="{{_item.cover}}" mode="aspectFill" lazy-load />
               <view class="goods-content">
                 <view class="goods-name omit {{_item.status === 3 ? 'invalid' : ''}}">{{_item.name}}</view>
                 <block wx:if="{{_item.status === 1}}">
