--- a/pages/subpages/mall/goods/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/goods/subpages/order-check/index.wxml
@@ -26,7 +26,7 @@
       <view>{{item.shopInfo ? item.shopInfo.name : '官方自营'}}</view>
     </view>
     <view class="goods-item row" wx:for="{{item.goodsList}}" wx:key="index" wx:for-item="goods">
-      <image class="goods-img" src="{{goods.image}}" mode="aspectFill" lazy-load />
+      <image class="goods-img" src="{{goods.cover}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
         <view class="goods-name omit">{{goods.name}}</view>
         <view class="goods-sku omit single-line" wx:if="{{goods.selectedSkuName}}">规格：{{goods.selectedSkuName}}</view>
