--- a/pages/subpages/mine/components/goods-list/index.wxml
+++ b/pages/subpages/mine/components/goods-list/index.wxml
@@ -1,6 +1,6 @@
 <view class="goods-list">
   <view class="goods-item row" wx:for="{{list}}" wx:key="index" >
-    <image class="goods-img" src="{{item.image}}" mode="aspectFill" lazy-load />
+    <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
     <view class="goods-content">
       <view class="goods-name omit">{{item.name}}</view>
       <view class="goods-sku omit single-line" wx:if="{{item.selectedSkuName}}">规格：{{item.selectedSkuName}}</view>
