--- a/pages/subpages/mine/merchant-center/subpages/scenic-management/subpages/order-detail/components/goods-list/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-management/subpages/order-detail/components/goods-list/index.wxml
@@ -1,7 +1,7 @@
 <view class="goods-list">
   <view class="goods-item" wx:for="{{list}}" wx:key="index">
     <view class="row" bindtap="navToGoodsDetail" data-id="{{item.goodsId}}">
-      <image class="goods-img" src="{{item.image}}" mode="aspectFill" lazy-load />
+      <image class="goods-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
       <view class="goods-content">
         <view class="goods-name omit">{{item.name}}</view>
         <view class="goods-sku omit single-line" wx:if="{{item.selectedSkuName}}">规格：{{item.selectedSkuName}}</view>
