--- a/pages/subpages/mine/create-note/index.wxml
+++ b/pages/subpages/mine/create-note/index.wxml
@@ -53,6 +53,27 @@
         <image class="arrow" src="/images/arrow.png" />
       </view>
     </view>
+
+    <view class="commodity-list">
+      <van-swipe-cell wx:for="{{mediaCommodityList}}" wx:key="index" bind:close="deleteCommodity" data-index="{{index}}" async-close right-width="{{ 40 }}">
+        <view class="commodity-item row">
+          <view class="commodity-image-wrap">
+            <image class="commodity-image" src="{{item.cover}}" />
+            <view class="type-tag row">{{ ['景点', '酒店', '餐馆', '商品'][item.type -1] }}</view>
+          </view>
+          <view class="commodity-info">
+            <view class="commodity-name omit single-line">{{item.name}}</view>
+            <view class="row end">
+              <price-unit price="{{item.price || 0}}" unit="{{ item.type !== 4 ? '起' : '' }}" fontSize="22rpx" integerFontSize="26rpx" />
+            </view>
+          </view>
+        </view>
+        <view class="swipe-cell-delete-btn row center" slot="right">
+          <image class="delete-icon" src="/images/delete.png" />
+        </view>
+      </van-swipe-cell>
+    </view>
+
     <empty-illus wx:if="{{!mediaCommodityList.length}}" desc="暂未选择商品" height="520rpx" />
   </view>
 </view>
