--- a/pages/subpages/mine/create-note/index.wxss
+++ b/pages/subpages/mine/create-note/index.wxss
@@ -11,7 +11,7 @@
   border-radius: 16rpx;
 }
 .title-wrap {
-  padding: 24rpx 0;
+  padding-top: 32rpx;
 }
 .title {
   color: #333;
@@ -86,6 +86,65 @@
 .arrow {
   width: 26rpx;
   height: 26rpx;
+}
+
+.commodity-list {
+  padding: 32rpx 0;
+}
+.commodity-item {
+  margin-bottom: 24rpx;
+  padding: 16rpx;
+  border-radius: 20rpx;
+  border: 1px solid #eee;
+}
+.commodity-item:last-child {
+  margin-bottom: 0;
+}
+.commodity-image-wrap {
+  position: relative;
+  font-size: 0;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 10rpx;
+  overflow: hidden;
+}
+.commodity-image {
+  width: 100%;
+  height: 100%;
+}
+.type-tag {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 8rpx;
+  height: 30rpx;
+  color: #fff;
+  font-size: 18rpx;
+  line-height: 1;
+  border-bottom-right-radius: 6rpx;
+  background: rgba(0, 0, 0, 0.6);
+}
+.commodity-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 16rpx;
+  flex: 1;
+  height: 100rpx;
+}
+.commodity-name {
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+
+.swipe-cell-delete-btn {
+  width: 40px;
+  height: 100%;
+}
+.delete-icon {
+  width: 32rpx;
+  height: 32rpx;
 }
 
 .publish-btn {
