--- a/pages/subpages/home/media/note/components/note-item/index.wxss
+++ b/pages/subpages/home/media/note/components/note-item/index.wxss
@@ -84,13 +84,15 @@
   font-size: 28rpx;
 }
 
-.goods-info-wrap {
-  margin: 24rpx;
+.commodity-list {
+  padding: 24rpx;
+}
+.commodity-item {
   padding: 16rpx;
   border-radius: 20rpx;
   border: 1px solid #eee;
 }
-.goods-image-wrap {
+.commodity-image-wrap {
   position: relative;
   font-size: 0;
   width: 100rpx;
@@ -98,7 +100,7 @@
   border-radius: 10rpx;
   overflow: hidden;
 }
-.goods-image {
+.commodity-image {
   width: 100%;
   height: 100%;
 }
@@ -114,7 +116,7 @@
   border-bottom-right-radius: 6rpx;
   background: rgba(0, 0, 0, 0.6);
 }
-.goods-info {
+.commodity-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -122,7 +124,7 @@
   flex: 1;
   height: 100rpx;
 }
-.goods-name {
+.commodity-name {
   color: #333;
   font-size: 24rpx;
   font-weight: bold;
