--- a/pages/tab-bar-pages/home/components/note-item/index.wxss
+++ b/pages/tab-bar-pages/home/components/note-item/index.wxss
@@ -52,13 +52,14 @@
   font-size: 28rpx;
 }
 
-.goods-info-wrap {
+/* .commodity-list {} */
+.commodity-info-wrap {
   margin: 24rpx 0;
   padding: 16rpx;
   border-radius: 20rpx;
   border: 1px solid #eee;
 }
-.goods-image-wrap {
+.commodity-image-wrap {
   position: relative;
   font-size: 0;
   width: 100rpx;
@@ -66,7 +67,7 @@
   border-radius: 10rpx;
   overflow: hidden;
 }
-.goods-image {
+.commodity-image {
   width: 100%;
   height: 100%;
 }
@@ -82,7 +83,7 @@
   border-bottom-right-radius: 6rpx;
   background: rgba(0, 0, 0, 0.6);
 }
-.goods-info {
+.commodity-info {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -90,7 +91,7 @@
   flex: 1;
   height: 100rpx;
 }
-.goods-name {
+.commodity-name {
   color: #333;
   font-size: 24rpx;
   font-weight: bold;
