--- a/pages/subpages/home/media/note/components/note-item/index.wxml
+++ b/pages/subpages/home/media/note/components/note-item/index.wxml
@@ -32,50 +32,7 @@
     <text wx:if="{{item.content.length > 50}}" bindtap="toggleContentFold" style="color: #000; font-weight: bold;"> {{contentFold ? '展开' : '收起'}}</text>
   </view>
 
-  <!-- <view class="goods-info-wrap row" wx:if="{{item.goodsInfo}}" bindtap="navToGoodsDetail">
-    <view class="goods-image-wrap">
-      <image class="goods-image" src="{{item.goodsInfo.cover}}" />
-      <view class="type-tag row">商品</view>
-    </view>
-    <view class="goods-info">
-      <view class="goods-name omit single-line">{{item.goodsInfo.name}}</view>
-      <view class="row between baseline">
-        <view class="row baseline">
-          <price-unit price="{{item.goodsInfo.price || 0}}" fontSize="22rpx" integerFontSize="26rpx" />
-          <view class="market-price">¥{{item.goodsInfo.marketPrice}}</view>
-        </view>
-        <view class="sales-volumns">已售{{item.goodsInfo.salesVolume}}件</view>
-      </view>
-    </view>
-  </view> -->
-
-  <view class="commodity-list" wx:if="{{item.commodityList.length}}">
-    <view 
-      class="commodity-item row" 
-      wx:for="{{item.commodityList}}" 
-      wx:key="_index" 
-      wx:for-index="_index" 
-      wx:for-item="_item" 
-      catchtap="checkCommodityDetail" 
-      data-type="{{_item.type}}" 
-      data-id="{{_item.id}}"
-    >
-      <view class="commodity-image-wrap">
-        <image class="commodity-image" src="{{_item.cover}}" />
-        <view class="type-tag row">{{['景点', '酒店',  '餐馆', '商品'][_item.type - 1]}}</view>
-      </view>
-      <view class="commodity-info">
-        <view class="commodity-name omit single-line">{{_item.name}}</view>
-        <view class="row between baseline">
-          <view class="row baseline">
-            <price-unit price="{{_item.price || 0}}" unit="{{_item.type !== 4 ? '起' : ''}}" fontSize="22rpx" integerFontSize="26rpx" />
-            <view class="market-price" wx:if="{{_item.marketPrice}}}">¥{{_item.marketPrice}}</view>
-          </view>
-          <view class="sales-volumns" wx:if="{{_item.salesVolume}}}">已售{{_item.salesVolume}}件</view>
-        </view>
-      </view>
-    </view>
-  </view>
+  <commodity-list wx:if="{{item.commodityList.length}}" list="{{item.commodityList}}" />
   
   <view class="comment-wrap" wx:if="{{item.commentsNumber}}" bindtap="showCommentPopup">
     <view class="comment-list">
