--- a/pages/subpages/home/media/note/components/note-item/index.wxss
+++ b/pages/subpages/home/media/note/components/note-item/index.wxss
@@ -79,69 +79,15 @@
 }
 .content {
   margin-top: 12rpx;
+  margin-bottom: 24rpx;
   padding: 0 24rpx;
   color: #333;
   font-size: 28rpx;
 }
 
-.commodity-list {
-  padding: 24rpx;
-}
-.commodity-item {
-  padding: 16rpx;
-  border-radius: 20rpx;
-  border: 1px solid #eee;
-}
-.commodity-image-wrap {
-  position: relative;
-  font-size: 0;
-  width: 100rpx;
-  height: 100rpx;
-  border-radius: 10rpx;
-  overflow: hidden;
-}
-.commodity-image {
-  width: 100%;
-  height: 100%;
-}
-.type-tag {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 8rpx;
-  height: 30rpx;
-  color: #fff;
-  font-size: 18rpx;
-  line-height: 1;
-  border-bottom-right-radius: 6rpx;
-  background: rgba(0, 0, 0, 0.6);
-}
-.commodity-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: 16rpx;
-  flex: 1;
-  height: 100rpx;
-}
-.commodity-name {
-  color: #333;
-  font-size: 24rpx;
-  font-weight: bold;
-}
-.market-price {
-  margin-left: 8rpx;
-  color: #bbb;
-  font-size: 22rpx;
-  text-decoration: line-through;
-}
-.sales-volumns {
-  color: #999;
-  font-size: 22rpx;
-}
-
 .comment-wrap {
   margin: 24rpx;
+  margin-top: 0;
   padding: 20rpx 24rpx;
   background: #f5f6f8;
   border-radius: 20rpx;
@@ -169,7 +115,6 @@
 .btn-wrap {
   display: flex;
   align-items: center;
-  margin-top: 24rpx;
   padding: 10rpx 68rpx 24rpx 24rpx;
 }
 .comment-btn {
