--- a/pages/subpages/mine/create-video/index.wxss
+++ b/pages/subpages/mine/create-video/index.wxss
@@ -3,28 +3,39 @@
 }
 
 .card {
-  position: relative;
   margin-bottom: 24rpx;
-  padding: 24rpx;
+  padding: 0 24rpx;
   font-size: 28rpx;
   background: #fff;
   border-radius: 16rpx;
+}
+.title-wrap {
+  padding-top: 32rpx;
 }
 .title {
   color: #333;
   font-weight: bold;
 }
 
-.title-textarea {
+.video-info-wrap {
+  padding: 24rpx 0;
+}
+
+.textarea-wrap {
+  position: relative;
   margin-right: 24rpx;
   flex: 1;
+}
+.title-textarea {
+  width: 100%;
+  height: 310rpx;
   color: #333;
   line-height: 1.5;
 }
 .length-desc {
   position: absolute;
-  right: 228rpx;
-  bottom: 24rpx;
+  right: 0;
+  bottom: 0;
   color: #999;
 }
 .cover-wrap {
@@ -46,7 +57,7 @@
 }
 
 .list {
-  height: 110rpx;
+  padding: 32rpx 0;
   border-bottom: 1px solid #F5F6F7;
 }
 .list:last-child {
@@ -66,14 +77,70 @@
   width: 42rpx; 
   height: 42rpx;
 }
+
+.add-btn {
+  color: #1986F8;
+  font-size: 26rpx;
+}
 .arrow {
-  width: 32rpx;
-  height: 32rpx;
+  width: 26rpx;
+  height: 26rpx;
+}
+
+.commodity-list {
+  padding: 32rpx 0 8rpx;
+}
+.commodity-item {
+  margin-bottom: 24rpx;
+  padding: 16rpx;
+  border-radius: 20rpx;
+  border: 1px solid #eee;
+}
+.commodity-image-wrap {
+  position: relative;
+  font-size: 0;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 10rpx;
+  overflow: hidden;
+}
+.commodity-image {
+  width: 100%;
+  height: 100%;
+}
+.type-tag {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 8rpx;
+  height: 30rpx;
+  color: #fff;
+  font-size: 18rpx;
+  line-height: 1;
+  border-bottom-right-radius: 6rpx;
+  background: rgba(0, 0, 0, 0.6);
+}
+.commodity-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 16rpx;
+  flex: 1;
+  height: 100rpx;
+}
+.commodity-name {
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+
+.swipe-cell-delete-btn {
+  width: 40px;
+  height: 100%;
 }
 .delete-icon {
-  margin-left: 10rpx;
-  width: 30rpx;
-  height: 30rpx;
+  width: 32rpx;
+  height: 32rpx;
 }
 
 .publish-btn {
