--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -238,8 +238,9 @@
     <view class="content-title">达人打卡</view>
   </view>
   <view class="media-wrap">
-    <fall-flow list="{{mediaList}}" generic:item="media-item" />
-    <view class="no-more-tips">～没有更多了～</view>
+    <fall-flow wx:if="{{mediaList.length}}" list="{{mediaList}}" generic:item="media-item" />
+    <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无达人打卡" height="520rpx" />
+    <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
   </view>
 </view>
 
