feat: 商品相关媒体

--- a/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/index.wxml
@@ -196,7 +196,7 @@
   </view>
   <view class="media-wrap">
     <fall-flow wx:if="{{mediaList.length}}" list="{{mediaList}}" generic:item="media-item" />
-      <empty-illus wx:if="{{finished && !mediaList.length}}" desc="达人打卡" height="520rpx" />
+      <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无达人打卡" height="520rpx" />
       <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
   </view>
 </view>
